# mpc_controller

./: CMakeLists.txt  README.md  package.xml
src/: equation_of_motions.py  mpc_controller.py  nmpc_package.py  position_controller.py  trial.py
